--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inflection": "^1.12.0"
+    "inflection": "^1.12.0",
+    "multer": "^1.4.2"
   }
 }
